--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Category>
-
-<div class"container">
+<partial name="_Notification" />
+<div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
             <h2 class="text-primary">
@@ -8,7 +8,7 @@
             </h2>
         </div>
         <div class="col-6">
-            <a asp-controller="" asp-action"" class="btn btn-primary">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> New Category
             </a>
         </div>
@@ -23,6 +23,7 @@
                     Display Order
                 </th>
             </tr>
+            <th></th>
         </thead>
         <tbody>
             @foreach (var obj in Model.OrderBy(u => u.DisplayOrder))
@@ -31,6 +32,16 @@
                     <td>@obj.Name</td>
                     <td>
                         @obj.DisplayOrder
+                    </td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i> Edit
+                            </a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash-fill"></i> Delete
+                            </a>
+                        </div>
                     </td>
                 </tr>
             }
