--- a/BulkyWeb/Views/Shared/_Notification.cshtml
+++ b/BulkyWeb/Views/Shared/_Notification.cshtml
@@ -2,7 +2,7 @@
 @if (TempData["success"] != null)
 {
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
     toastr.success("@TempData["success"]");
     </script>
@@ -10,7 +10,7 @@
 @if(TempData["error"] != null)
 {
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
         toastr.error("@TempData["error"]");
     </script>
