--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -27,6 +27,7 @@
                     <th>Price</th>
                     <th>Author</th>
                     <th>Category</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -42,6 +43,9 @@
                         </td>
                         <td>
                             @obj.Author
+                        </td>
+                        <td>
+                            @obj.CategoryId
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
