--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -59,6 +59,7 @@
             Made with <i class="bi bi-heart-fill"></i> by Erkan
         </div>
     </footer>
+    <script src="https://cdn.tiny.cloud/1/uk7k29pfjx5hpari52z21flszcq4ov4nlir63vhurcjyq21w/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
