--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -43,9 +43,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial">
-
-                    </partial>
+                    <partial name="_LoginPartial"></partial>
                 </div>
             </div>
         </nav>
