--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         @* } *@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                                <i class="bu bi-cart"></i> &nbsp; (0)
+                                <i class="bu bi-cart"></i> &nbsp;
                             </a>
                         </li>
                     </ul>
